fixing layout issue

--- a/src/documents/styles/style.css.scss
+++ b/src/documents/styles/style.css.scss
@@ -202,6 +202,7 @@ h2 {
         display: inline-block;
         margin: 0 2vw 2vw;
         width: 36vw;
+        vertical-align: top;
     }
 
     @media screen and (min-width: 1400px){
